changed signature of typeReferences call but have not yet used the parameter